# bazel-swift-openapi-generator

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  defs.bzl  extensions.bzl  swift_deps_index.json
example/GreetingService/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  rules_swift_package_manager.patch  swift_deps_index.json
example/GreetingService/Sources/: BUILD.bazel  main.swift  openapi.yaml
internal/: .gitignore.copy  BUILD.bazel.copy  MODULE.bazel.copy  MODULE.bazel.template  extensions.bzl.template  rules_swift_package_manager.patch  swift-openapi-generator.patch  update.sh
